# intelligent-hybrid-rf-owc-6g-network

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-checks.yml
configs/: synthetic_lab.yaml
data/: README.md
docs/: independent_research_boundary.md  methodology.md  report_template.md  synthetic_lab.md
matlab/: plot_rf_owc_metrics.m
notebooks/: README.md
scripts/: run_synthetic_rf_owc_lab.py
src/rfowc6g/: __init__.py  audit.py  channels.py  config.py  metrics.py  orchestration.py  prediction.py  reporting.py  synthetic.py  visualization.py
tests/: test_audit.py  test_metrics.py  test_orchestration.py  test_pipeline.py  test_synthetic.py
