[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "intelligent-hybrid-rf-owc-6g-network"
version = "0.1.0"
description = "Synthetic independent 6G hybrid RF and optical wireless network simulator for AI-driven orchestration and photonic-enabled wireless systems."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Hirakhyzer"}]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
